# RL_5R

./: README.md
fiver/fiver_control/: CMakeLists.txt  package.xml
fiver/fiver_control/config/: fiver_control.yaml
fiver/fiver_control/launch/: fiver_control.launch
fiver/fiver_control/src/: a2c_agent.py  a2c_parameters.json  fiver_TF.py  fiver_gym_env.py  gazebo_restarter.sh  joint_controller.py  silinecek_yedek.py  test.py
fiver/fiver_control/src/ch8/: a2c_agent.py  fiver_gym_env.py
fiver/fiver_control/src/environment/: utils.py
fiver/fiver_control/src/logs/A2C_Pendulum-v0_20-04-10-03-28/: agent_params.json
fiver/fiver_control/src/trained_models/: A2C_Pendulum-v0.ptm  A2C_Pendulum-v0.ptm.agent_params
fiver/fiver_description/: CMakeLists.txt  package.xml
fiver/fiver_description/urdf/: fiver.gazebo  fiver.xacro
fiver/fiver_description/urdf/Untitled Folder/: fiver.xacro  fiver_debug.xacro
fiver/fiver_gazebo/: CMakeLists.txt  package.xml
fiver/fiver_gazebo/launch/: fiver_world.launch  main.launch
fiver/fiver_gazebo/rviz/: rivz_conf.rviz
